Revert "mailto added in href"

--- a/portfolio/assets/index.html
+++ b/portfolio/assets/index.html
@@ -274,7 +274,7 @@
             <div class="footer__social">
                 <a href="http://www.facebook.com/rohini patil.phpid=100011294864839" class="footer__icon"><i class='bx bxl-facebook' ></i></a>
                 <a href="https://www.instagram.com/rohini2305/" class="footer__icon"><i class='bx bxl-instagram' ></i></a>
-                <a href="mailto:rohinipatil221997@gmail.com" class="footer__icon"><i class='bx bx-mail-send' ></i></a>
+                <a href="https://www.rohinipatil221997@gmail.com" class="footer__icon"><i class='bx bx-mail-send' ></i></a>
                 <a href="https://github.com/Rohini763" class="footer__icon"><i class='bx bxl-github' ></i></a>
                 <a href="http://twitter.com/@rohinip00992049" class="footer__icon"><i class='bx bxl-twitter' ></i></a>
                 
